--- a/Views/Shared/_Sidebar.cshtml
+++ b/Views/Shared/_Sidebar.cshtml
@@ -1,56 +1,15 @@
-﻿@{
-}
+﻿@using TravisBrownBlog.Services.Interfaces
+@using TravisBrownBlog.Enums
+
+@inject IBlogPostService _BlogPostService
+@inject IImageService _ImageService
+
 
 
 <!-- Start Sidebar Area  -->
 <div class="sidebar-inner">
 
-    <!-- Start Single Widget  -->
-    <div class="axil-single-widget widget widget_categories mb--30">
-        <ul>
-            <li class="cat-item">
-                <a href="#" class="inner">
-                    <div class="thumbnail">
-                        <img src="~/assets/images/post-images/category-image-01.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <h5 class="title">Tech</h5>
-                    </div>
-                </a>
-            </li>
-            <li class="cat-item">
-                <a href="#" class="inner">
-                    <div class="thumbnail">
-                        <img src="~/assets/images/post-images/category-image-02.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <h5 class="title">Style</h5>
-                    </div>
-                </a>
-            </li>
-            <li class="cat-item">
-                <a href="#" class="inner">
-                    <div class="thumbnail">
-                        <img src="~/assets/images/post-images/category-image-03.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <h5 class="title">Travel</h5>
-                    </div>
-                </a>
-            </li>
-            <li class="cat-item">
-                <a href="#" class="inner">
-                    <div class="thumbnail">
-                        <img src="~/assets/images/post-images/category-image-04.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <h5 class="title">Food</h5>
-                    </div>
-                </a>
-            </li>
-        </ul>
-    </div>
-    <!-- End Single Widget  -->
+
 
 
     <!-- Start Single Widget  -->
@@ -64,144 +23,154 @@
         </form>
     </div>
     <!-- End Single Widget  -->
-
-
     <!-- Start Single Widget  -->
     <div class="axil-single-widget widget widget_postlist mb--30">
-        <h5 class="widget-title">Popular on Blogar</h5>
+        <h5 class="widget-title">Popular Posts</h5>
         <!-- Start Post List  -->
         <div class="post-medium-block">
 
-            <!-- Start Single Post  -->
-            <div class="content-block post-medium mb--20">
-                <div class="post-thumbnail">
-                    <a href="post-details.html">
-                        <img src="~/assets/images/small-images/blog-sm-01.jpg" alt="Post Images">
-                    </a>
-                </div>
-                <div class="post-content">
-                    <h6 class="title">
-                        <a href="post-details.html">
-                            The underrated design book that transformed the way I
-                            work
+            @*Foreach popular posts*@
+            @foreach (BlogPost blogPost in (await _BlogPostService.GetPopularBlogPostsAsync()).Take(3))
+            {
+                <!-- Start Single Post  -->
+                <div class="content-block post-medium mb--20">
+                    <div class="post-thumbnail">
+                        <a asp-action="Details" asp-controller="BlogPosts" asp-route-slug="@blogPost.Slug">
+                            <img src="@_ImageService.ConvertByteArrayToFile(blogPost.ImageData!,blogPost.ImageType!,(int)DefaultImage.BlogPostImage)" />
                         </a>
-                    </h6>
-                    <div class="post-meta">
-                        <ul class="post-meta-list">
-                            <li>Feb 17, 2019</li>
-                            <li>300k Views</li>
-                        </ul>
+                    </div>
+                    <div class="post-content">
+                        <h6 class="title">
+                            <a asp-action="Details" asp-controller="BlogPosts" asp-route-slug="@blogPost.Slug">
+                                @blogPost.Title
+                            </a>
+                        </h6>
+                        <div class="post-meta">
+                            <ul class="post-meta-list">
+                                <li>@blogPost.DateCreated.ToString("MM dd yyyy")
+                                <li>
+                                <li>@blogPost.Comments.Count Comments</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- End Single Post  -->
-            <!-- Start Single Post  -->
-            <div class="content-block post-medium mb--20">
-                <div class="post-thumbnail">
-                    <a href="post-details.html">
-                        <img src="~/assets/images/small-images/blog-sm-02.jpg" alt="Post Images">
-                    </a>
-                </div>
-                <div class="post-content">
-                    <h6 class="title">
-                        <a href="post-details.html">Here’s what you should (and shouldn’t) do when</a>
-                    </h6>
-                    <div class="post-meta">
-                        <ul class="post-meta-list">
-                            <li>Feb 17, 2019</li>
-                            <li>300k Views</li>
-                        </ul>
+                <!-- End Single Post  -->
+            }
+            <!-- Start Post List  -->
+            
+                <h5 class="widget-title">Recent Blogs</h5>
+                @*Foreach popular posts*@
+                @foreach (BlogPost blogPost in await _BlogPostService.GetRecentBlogPostsAsync(3))
+                {
+                    <!-- Start Single Post  -->
+                    <div class="content-block post-medium mb--20">
+                        <div class="post-thumbnail">
+                            <a asp-action="Details" asp-controller="BlogPosts" asp-route-slug="@blogPost.Slug">
+                                <img src="@_ImageService.ConvertByteArrayToFile(blogPost.ImageData!,blogPost.ImageType!,(int)DefaultImage.BlogPostImage)" />
+                            </a>
+                        </div>
+                        <div class="post-content">
+                            <h6 class="title">
+                                <a asp-action="Details" asp-controller="BlogPosts" asp-route-slug="@blogPost.Slug">
+                                    @blogPost.Title
+                                </a>
+                            </h6>
+                            <div class="post-meta">
+                                <ul class="post-meta-list">
+                                    <li>@blogPost.DateCreated.ToString("MM dd yyyy")
+                                    <li>
+                                    <li>@blogPost.Comments.Count Comments</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                </div>
+
+                    <!-- End Single Post  -->
+                }
+             
+                    <h5 class="widget-title">Categoires</h5>
+                    @foreach (Category category in (await _BlogPostService.GetCategoriesAsync()).Take(4))
+                    {
+                        <!-- Start Single Post  -->
+                        <div class="content-block post-medium mb--20">
+                            <a asp-action="Details" asp-controller="Categories" asp-route-id="@category.Id" class=""> 
+                            <div class="post-thumbnail">
+                                <img src="@_ImageService.ConvertByteArrayToFile(category.ImageData!,category.ImageType!,(int)DefaultImage.CategoryImage)" alt="Category Image" />
+                            </div>
+                            <div class="content">
+                                <h6 class="title">
+                                  <h5>
+                                            @category.Name
+                                </h5>
+                                </h6>
+
+                            </div>
+                            </a>
+
+
+                        </div>
+                        <!-- End Single Post  -->
+                    }
+
+                
+                <!-- End Post List  -->
+
             </div>
-            <!-- End Single Post  -->
-            <!-- Start Single Post  -->
-            <div class="content-block post-medium mb--20">
-                <div class="post-thumbnail">
-                    <a href="post-details.html">
-                        <img src="~/assets/images/small-images/blog-sm-03.jpg" alt="Post Images">
-                    </a>
-                </div>
-                <div class="post-content">
-                    <h6 class="title">
-                        <a href="post-details.html">
-                            How a developer and designer duo at Deutsche Bank keep
-                            remote
+            <!-- End Single Widget  -->
+            <!-- Start Single Widget  -->
+            <div class="axil-single-widget widget widget_social mb--30">
+                <h5 class="widget-title">Stay In Touch</h5>
+                <!-- Start Post List  -->
+                <ul class="social-icon md-size justify-content-center">
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-slack"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                </ul>
+                <!-- End Post List  -->
+            </div>
+            <!-- End Single Widget  -->
+            <!-- Start Single Widget  -->
+            <div class="axil-single-widget widget widget_instagram mb--30">
+                <h5 class="widget-title">Instagram</h5>
+                <!-- Start Post List  -->
+                <ul class="instagram-post-list-wrapper">
+                    <li class="instagram-post-list">
+                        <a href="#">
+                            <img src="~/assets/images/small-images/instagram-01.jpg" alt="Instagram Images">
                         </a>
-                    </h6>
-                    <div class="post-meta">
-                        <ul class="post-meta-list">
-                            <li>Feb 17, 2019</li>
-                            <li>300k Views</li>
-                        </ul>
-                    </div>
-                </div>
+                    </li>
+                    <li class="instagram-post-list">
+                        <a href="#">
+                            <img src="~/assets/images/small-images/instagram-02.jpg" alt="Instagram Images">
+                        </a>
+                    </li>
+                    <li class="instagram-post-list">
+                        <a href="#">
+                            <img src="~/assets/images/small-images/instagram-03.jpg" alt="Instagram Images">
+                        </a>
+                    </li>
+                    <li class="instagram-post-list">
+                        <a href="#">
+                            <img src="~/assets/images/small-images/instagram-04.jpg" alt="Instagram Images">
+                        </a>
+                    </li>
+                    <li class="instagram-post-list">
+                        <a href="#">
+                            <img src="~/assets/images/small-images/instagram-05.jpg" alt="Instagram Images">
+                        </a>
+                    </li>
+                    <li class="instagram-post-list">
+                        <a href="#">
+                            <img src="~/assets/images/small-images/instagram-06.jpg" alt="Instagram Images">
+                        </a>
+                    </li>
+                </ul>
+                <!-- End Post List  -->
             </div>
-            <!-- End Single Post  -->
+            <!-- End Single Widget  -->
+
 
         </div>
-        <!-- End Post List  -->
-
-    </div>
-    <!-- End Single Widget  -->
-
-
-    <!-- Start Single Widget  -->
-    <div class="axil-single-widget widget widget_social mb--30">
-        <h5 class="widget-title">Stay In Touch</h5>
-        <!-- Start Post List  -->
-        <ul class="social-icon md-size justify-content-center">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-slack"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-        </ul>
-        <!-- End Post List  -->
-    </div>
-    <!-- End Single Widget  -->
-
-
-    <!-- Start Single Widget  -->
-    <div class="axil-single-widget widget widget_instagram mb--30">
-        <h5 class="widget-title">Instagram</h5>
-        <!-- Start Post List  -->
-        <ul class="instagram-post-list-wrapper">
-            <li class="instagram-post-list">
-                <a href="#">
-                    <img src="~/assets/images/small-images/instagram-01.jpg" alt="Instagram Images">
-                </a>
-            </li>
-            <li class="instagram-post-list">
-                <a href="#">
-                    <img src="~/assets/images/small-images/instagram-02.jpg" alt="Instagram Images">
-                </a>
-            </li>
-            <li class="instagram-post-list">
-                <a href="#">
-                    <img src="~/assets/images/small-images/instagram-03.jpg" alt="Instagram Images">
-                </a>
-            </li>
-            <li class="instagram-post-list">
-                <a href="#">
-                    <img src="~/assets/images/small-images/instagram-04.jpg" alt="Instagram Images">
-                </a>
-            </li>
-            <li class="instagram-post-list">
-                <a href="#">
-                    <img src="~/assets/images/small-images/instagram-05.jpg" alt="Instagram Images">
-                </a>
-            </li>
-            <li class="instagram-post-list">
-                <a href="#">
-                    <img src="~/assets/images/small-images/instagram-06.jpg" alt="Instagram Images">
-                </a>
-            </li>
-        </ul>
-        <!-- End Post List  -->
-    </div>
-    <!-- End Single Widget  -->
-
-
-</div>
-<!-- End Sidebar Area  -->
+        <!-- End Sidebar Area  -->
