--- a/Views/BlogPosts/Create.cshtml
+++ b/Views/BlogPosts/Create.cshtml
@@ -4,66 +4,102 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>BlogPost</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create" asp-controller="BlogPosts" method="post" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
-                <span asp-validation-for="Content" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select> 
+<div class="post-single-wrapper axil-section-gap bg-color-white">
+    <div class="container">
 
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
-            </div>
-            
-            
-            <div class="form-group">
-                <label asp-for="Abstract" class="control-label"></label>
-                <input asp-for="Abstract" class="form-control" />
-                <span asp-validation-for="Abstract" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
+        <div class="row card shadow-lg">
+            <div class="col-md-12">
+                <h1>Create</h1>
+
+                <h4>BlogPost</h4>
+                <hr />
+
+                <form asp-action="Create" asp-controller="BlogPosts" method="post" enctype="multipart/form-data">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Title" class="control-label"></label>
+                        <input asp-for="Title" class="form-control"/>
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Content" class="control-label"></label>
+                        <textarea asp-for="Content" class="form-control  editor ck-editor__editable_inline"></textarea>
+                        <span asp-validation-for="Content" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="CategoryId" class="control-label"></label>
+                        <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+
+                        <span asp-validation-for="CategoryId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Tags" class="control-label"></label>
+                        <select name="SelectedTags" class="form-control" asp-items="ViewBag.BlogPostTags" multiple></select>
+
+                        
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Abstract" class="control-label"></label>
+                        <input asp-for="Abstract" class="form-control" />
+                        <span asp-validation-for="Abstract" class="text-danger"></span>
+                    </div>
+                    @*     <div class="form-group form-check">
+                    <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsDeleted" /> @Html.DisplayNameFor(model => model.IsDeleted)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
+                    </label>
+                    </div>*@
+                    @*  <div class="form-group form-check">
+                    <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsPublished" /> @Html.DisplayNameFor(model => model.IsPublished)
-                </label>
-            </div>
-          <div class="form-group">
-              <label asp-for="BlogPostImage" class="control-label"></label>
-              <img id="BlogPostImage" class="img-fluid" src="~/img/default-blog-thumb.png" />
-              <input asp-for="BlogPostImage" class="form-control" accept=".png,.jpg,.jpeg,.gif" 
-                            onchange="document.getElementById('BlogPostImage').src= window.URL.createdObjectURl(this.files[0])">
-"
-          </div>
+                    </label>
+                    </div>*@
+                    <div class="form-group form-check">
+                        <input class="form-check-input" asp-for="IsDeleted" />
+                        <label class="form-check-label" asp-for=IsDeleted></label>
+                        <span asp-validation-for="IsDeleted" class="text-dagner"></span>
+                    </div>
+                    <div class="form-group form-check">
+                        <input class="form-check-input" asp-for="IsPublished" />
+                        <label class="form-check-label" asp-for=IsPublished></label>
+                        <span asp-validation-for="IsPublished" class="text-dagner"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="BlogPostImage" class="control-label"></label>
+                        <img id="BlogPostImage" class="img-fluid" src="~/img/default-blog-thumb.png" />
+                        <input asp-for="BlogPostImage" class="form-control" accept=".png,.jpg,.jpeg,.gif"
+                               onchange="document.getElementById('BlogPostImage').src= window.URL.createdObjectURl(this.files[0])">
+                        "
+                    </div>
 
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
+                </form>
+
+
+                <div>
+                    <a asp-action="Index">Back to List</a>
+                </div>
             </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
+    <script>
+        ClassicEditor
+            .create(document.querySelector('.editor'))
+            .catch(error => {
+                console.error(error);
+            });
+    </script>
+
+    }
