--- a/Views/BlogPosts/Details.cshtml
+++ b/Views/BlogPosts/Details.cshtml
@@ -1,106 +1,308 @@
 ﻿@model TravisBrownBlog.Models.BlogPost
 
+@using TravisBrownBlog.Enums
+@using TravisBrownBlog.Services.Interfaces
+@inject IImageService ImageService
+
 @{
     ViewData["Title"] = "Details";
 }
+<!-- Start Post Single Wrapper  -->
+<div class="post-single-wrapper axil-section-gap bg-color-white">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 offset-lg-2">
+                <!-- Start Banner Area -->
+                <div class="banner banner-single-post post-formate post-layout pb--40">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <!-- Start Single Slide  -->
+                                <div class="content-block">
+                                    <!-- Start Post Content  -->
+                                    <div class="post-content">
+                                        <div class="post-cat">
+                                            <div class="post-cat-list">
+                                                <a class="hover-flip-item-wrapper" href="#">
+                                                    <span class="hover-flip-item">
+                                                        <span data-text="FEATURED POST">FEATURED POST</span>
+                                                    </span>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <h1 class="title">
+                                            @Model.Title
+                                        </h1>
+                                        <!-- Post Meta  -->
+                                        <div class="post-meta-wrapper">
+                                            <div class="post-meta">
+                                                @*<div class="post-author-avatar border-rounded">
+                                                <img src="assets/images/post-images/author/author-image-3.png" alt="Author Images">
+                                                </div>*@
+                                                <div class="content">
+                                                    <h6 class="post-author-name">
+                                                        <a class="hover-flip-item-wrapper" href="author.html">
+                                                            <span class="hover-flip-item">
+                                                                <span data-text="@Model.Creator?.FullName">@Model.Creator?.FullName</span>
+                                                            </span>
+                                                        </a>
+                                                    </h6>
+                                                    <ul class="post-meta-list">
+                                                        <li>@Model.DateCreated.ToString("MM dd yyyy")</li>
+                                                        <li>@Model.Comments.Count() Comments</li>
+                                                    </ul>
+                                                </div>
+                                            </div>
 
-<h1>Details</h1>
+                                        </div>
+                                    </div>
+                                    <!-- End Post Content  -->
+                                </div>
+                                <!-- End Single Slide  -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Banner Area -->
+                <!-- Start Blog Details  -->
+                <div class="axil-post-details">
 
-<div>
+                    <div>
+                        <h1>Abstract</h1>
+                        <p class="has-medium-font-size">
+                            @Model.Abstract
+                        </p>
+                        <p>
+                            @Html.Raw(Model.Content)
+                        </p>
+                        <div class="tagcloud">
+                            @foreach (Tag tag in Model.Tags)
+                            {
+                                <a href="#">@tag.Name</a>
+                            }
+                        </div>
+                    </div>
+
+
+
+                    <!-- Start Comment Form Area  -->
+                    <div class="axil-comment-area">
+                        <div class="axil-total-comment-post">
+                            <div class="title">
+                                <h4 class="mb--0">@Model.Comments.Count() Comments</h4>
+                            </div>
+                            <div class="add-comment-button cerchio">
+                                <a class="axil-button button-rounded" asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="@Url.Action("Details", "BlogPosts",
+                                new{slug = Model.Slug})" tabindex="0"><span>Add Your Comment</span></a>
+                            </div>
+                        </div>
+                        @if (User.Identity!.IsAuthenticated)
+                        {
+
+
+                            <!-- Start Comment Respond  -->
+                            <div class="comment-respond">
+                                <h4 class="title">Post a comment</h4>
+                                <form asp-action="Create" asp-controller="Comments" method="post">
+                                    <input type="hidden" asp-for="Id" name="BlogPostId" />
+                                    <input type="hidden" asp-for="Slug" />
+                                    <p class="comment-notes">
+                                        <span id="email-notes">
+
+                                        </span> Required fields are marked <span class="required">*</span>
+                                    </p>
+                                    <div class=" row row-10">
+                                        <div class="col-12">
+                                            <div class="form-group">
+                                                <label for="message">Leave a Comment</label>
+                                                <textarea name="Body" rows="3" class="form-control editor "></textarea>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-lg-12">
+                                            <div class="form-submit cerchio">
+                                                <input type="submit" value="Post Comment" class="axil-button button-rounded" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                            <!-- End Comment Respond  -->
+                        }
+
+                        <!-- Start Comment Area  -->
+                        <div class="axil-comment-area">
+                            <h4 class="title">@Model.Comments.Count() comments</h4>
+                            <ul class="comment-list">
+                                @foreach (Comment comment in Model.Comments)
+                                {
+
+
+                                    <!-- Start Single Comment  -->
+                                    <li class="comment">
+                                        <div class="comment-body">
+                                            <div class="single-comment">
+                                                <div class="comment-img">
+                                                    <img src="@ImageService.ConvertByteArrayToFile(comment.Author?.ImageData,comment.Author?.ImageType!,(int)DefaultImage.BlogUserImage)" >
+                                                </div>
+                                                <div class="comment-inner">
+                                                    <h6 class="commenter">
+                                                        <a class="hover-flip-item-wrapper" href="#">
+                                                            <span class="hover-flip-item">
+                                                                <span data-text="@Model.Creator?.FullName">@Model.Creator?.FullName</span>
+                                                            </span>
+                                                        </a>
+                                                    </h6>
+                                                    <div class="comment-meta">
+                                                        <div class="time-spent">@comment.DateCreated.ToString("MM dd, YYYY at hh:mm tt")</div>
+                                                        <div class="reply-edit">
+                                                           @* <div class="reply">
+                                                                <a class="comment-reply-link hover-flip-item-wrapper" href="#">
+                                                                    <span class="hover-flip-item">
+                                                                        <span data-text="Reply">Reply</span>
+                                                                    </span>
+                                                                </a>
+                                                            </div>*@
+                                                        </div>
+                                                    </div>
+                                                    <div class="comment-text">
+                                                        <p class="b2">
+                                                            @Html.Raw(comment.Body)
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <!-- End Single Comment  -->
+                                }
+                            </ul>
+                        </div>
+                        <!-- End Comment Area  -->
+
+                    </div>
+                    <!-- End Comment Form Area  -->
+
+
+                </div>
+                <!-- End Blog Details  -->
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Post Single Wrapper  -->
+@*<h1>Details</h1>
+
+<div ">
     <h4>BlogPost</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row-md-12 ms-3">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Content)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Content)
+        <dd class="col-sm-10">
+            @Html.Raw(Model.Content)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DateCreated)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DateCreated)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.LastUpdated)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.LastUpdated)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Slug)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Slug)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Abstract)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Abstract)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsDeleted)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IsDeleted)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsPublished)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IsPublished)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ImageData)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ImageData)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ImageType)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ImageType)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Category)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Category.Name)
         </dd>
     </dl>
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create" asp-controller="Comments" method="post">
-           <input type="hidden" asp-for="Id" name="BlogPostId" />
-            <div class="form-group">
-                <label class="control-label">Add a Comment</label>
-                <textarea name="Body" rows="3" class="form-control"></textarea>
-                
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+@if (User.Identity!.IsAuthenticated)
+{
+    <div class="row card shadow-lg">
+        <div class="col-md-12">
+            <form asp-action="Create" asp-controller="Comments" method="post">
+                <input type="hidden" asp-for="Id" name="BlogPostId" />
+                <input type="hidden" asp-for="Slug" />
+                <div class="form-group">
+                    <label class="control-label">Add a Comment</label>
+                    <textarea name="Body" rows="3" class="form-control editor "></textarea>
 
-<div class="row">
-    @foreach(Comment comment in Model.Comments){
-        <p>@comment.Body</p>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+    </div>
+}
+<div class="row ">
+    @foreach (Comment comment in Model.Comments)
+    {
+        <li>@Html.Raw(comment.Body)</li>
     }
 </div>
 
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
+
+@section scripts{
+    <script>
+        ClassicEditor
+            .create(document.querySelector('.editor'))
+            .catch(error => {
+                console.error(error);
+            });
+    </script>
+
+}
