--- a/Views/BlogPosts/Edit.cshtml
+++ b/Views/BlogPosts/Edit.cshtml
@@ -1,91 +1,130 @@
 ﻿@model TravisBrownBlog.Models.BlogPost
 
+@using TravisBrownBlog.Enums
+@using TravisBrownBlog.Services.Interfaces
+
+@inject IImageService ImageServcie
+
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
 
-<h4>BlogPost</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-         <form asp-action="Edit" asp-controll="Contacts" enctype="multipart/form-data" method="post"/>
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="DateCreated" />
-            <input type="hidden" asp-for="LastUpdated" />
-            <input type="hidden" asp-for="ImageData" />
-            <input type="hidden" asp-for="ImageType" />
-            <input type="hidden" asp-for="Slug" />
+<div >
+    <div class="container">
 
-        <form asp-action="Edit" method="post"enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
-                <span asp-validation-for="Content" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
-                <span asp-validation-for="DateCreated" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastUpdated" class="control-label"></label>
-                <input asp-for="LastUpdated" class="form-control" />
-                <span asp-validation-for="LastUpdated" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Slug" class="control-label"></label>
-                <input asp-for="Slug" class="form-control" />
-                <span asp-validation-for="Slug" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Abstract" class="control-label"></label>
-                <input asp-for="Abstract" class="form-control" />
-                <span asp-validation-for="Abstract" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
+        <div class="row card shadow-lglass=" post-single-wrapper axil-section-gap bg-color-white" ">
+            <div class="col-md-12">
+                <h1>Edit</h1>
+
+                <h4>BlogPost</h4>
+                <hr />
+
+                <form asp-action="Edit" asp-controll="Contacts" enctype="multipart/form-data" method="post" />
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" />
+                <input type="hidden" asp-for="DateCreated" />
+                <input type="hidden" asp-for="LastUpdated" />
+                <input type="hidden" asp-for="ImageData" />
+                <input type="hidden" asp-for="ImageType" />
+                <input type="hidden" asp-for="Slug" />
+                <input type="hidden" asp-for="CreatorId" />
+
+                <form asp-action="Edit" method="post" enctype="multipart/form-data">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Id" />
+                    <div class="form-group">
+                        <label asp-for="Title" class="control-label"></label>
+                        <input asp-for="Title" class="form-control" />
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Content" class="control-label"></label>
+                        <input asp-for="Content" class="form-control editor" />
+                        <span asp-validation-for="Content" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="DateCreated" class="control-label"></label>
+                        <input asp-for="DateCreated" class="form-control" />
+                        <span asp-validation-for="DateCreated" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="LastUpdated" class="control-label"></label>
+                        <input asp-for="LastUpdated" class="form-control" />
+                        <span asp-validation-for="LastUpdated" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="CategoryId" class="control-label"></label>
+                        <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                        <span asp-validation-for="CategoryId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Tags" class="control-label"></label>
+                        <select name="SelectedTags" class="form-control" asp-items="ViewBag.BlogPostTags" multiple></select>
+
+
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Slug" class="control-label"></label>
+                        <input asp-for="Slug" class="form-control" />
+                        <span asp-validation-for="Slug" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Abstract" class="control-label"></label>
+                        <input asp-for="Abstract" class="form-control" />
+                        <span asp-validation-for="Abstract" class="text-danger"></span>
+                    </div>
+                    @*   <div class="form-group form-check">
+                    <label class="form-check-label"> </label>
                     <input class="form-check-input" asp-for="IsDeleted" /> @Html.DisplayNameFor(model => model.IsDeleted)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsPublished" /> @Html.DisplayNameFor(model => model.IsPublished)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="BlogPostImage" class="control-label"></label>
-                <img id="BlogPostImage" class="img-fluid" src="~/img/default-blog-thumb.png" />
-                <input asp-for="BlogPostImage" class="form-control" accept=".png,.jpg,.jpeg,.gif"
-                       onchange="document.getElementById('BlogPostImage').src= window.URL.createdObjectURl(this.files[0])">
-                "
-            </div>
 
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                    </div>
+                    <div class="form-group form-check">
+                    <label class="form-check-label"></label>
+                    <input class="form-check-input" asp-for="IsPublished" /> @Html.DisplayNameFor(model => model.IsPublished)
+
+                    </div>*@
+                    <div class="form-group form-check">
+                        <input class="form-check-input" asp-for="IsDeleted" />
+                        <label class="form-check-label" asp-for=IsDeleted></label>
+                        <span asp-validation-for="IsDeleted" class="text-dagner"></span>
+                    </div>
+                    <div class="form-group form-check">
+                        <input class="form-check-input" asp-for="IsPublished" />
+                        <label class="form-check-label" asp-for=IsPublished></label>
+                        <span asp-validation-for="IsPublished" class="text-dagner"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="BlogPostImage" class="control-label"></label>
+                        <img id="BlogPostImage" class="img-fluid" src="@ImageServcie.ConvertByteArrayToFile(Model.ImageData,Model.ImageType,(int)DefaultImage.BlogPostImage)" />
+                        <input asp-for="BlogPostImage" class="form-control" accept=".png,.jpg,.jpeg,.gif"
+                               onchange="document.getElementById('BlogPostImage').src= window.URL.createdObjectURl(this.files[0])">
+                        "
+                    </div>
+
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                    </div>
+                </form>
             </div>
-        </form>
+        </div>
+
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script>
+        ClassicEditor
+            .create(document.querySelector('.editor'))
+            .catch(error => {
+                console.error(error);
+            });
+    </script>
+    }
