--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,11 +1,14 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+@using TravisBrownBlog.Services.Interfaces
+
+@inject IBlogPostService BlogPostService
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TravisBrownBlog</title>
 
-   @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
     <link rel="stylesheet" href="~/assets/css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/css/vendor/font-awesome.css">
     <link rel="stylesheet" href="~/assets/css/vendor/slick.css">
@@ -14,11 +17,11 @@
     <link rel="stylesheet" href="~/assets/css/plugins/plugins.css">
     <link rel="stylesheet" href="~/assets/css/style.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    
+
 
 </head>
 <body>
-   <div class="main-wrapper">
+    <div class="main-wrapper">
         <div class="mouse-cursor cursor-outer"></div>
         <div class="mouse-cursor cursor-inner"></div>
 
@@ -52,6 +55,7 @@
                     <div class="col-xl-6 d-none d-xl-block">
                         <div class="mainmenu-wrapper">
                             <nav class="mainmenu-nav">
+
                                 <!-- Start Mainmanu Nav -->
                                 <ul class="mainmenu">
                                     <li><a asp-action="Index" asp-controller="Home">Home</a></li>
@@ -60,9 +64,30 @@
                                     <li><a asp-controller="Comments" asp-action="Index">Comments</a></li>
                                     <li><a asp-controller="Tags" asp-action="Index">Tags</a></li>
                                 </ul>
+                             
                                 <!-- End Mainmanu Nav -->
                             </nav>
                         </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-8 col-md-8 col-sm-9 col-12">
+                        <div class="header-search text-end d-flex align-items-center">
+                            <form asp-controller="Home" asp-action="SearchIndex" class="header-search-form d-sm-block d-none">
+                                <div class="axil-search form-group">
+                                    <button type="submit" class="search-button"><i class="fal fa-search"></i></button>
+                                    <input type="text" class="form-control" placeholder="Search" name="SearchString" id="SearchString">
+                                </div>
+                            </form>
+                            <div class="mobile-search-wrapper d-sm-none d-block">
+                                <button class="search-button-toggle"><i class="fal fa-search"></i></button>
+                                <form asp-controller="Home" asp-action="SearchIndex" class="header-search-form">
+                                    <div class="axil-search form-group">
+                                        <button type="submit" class="search-button"><i class="fal fa-search"></i></button>
+                                        <input type="text" class="form-control" placeholder="Search" name="SearchString" id="SearchString">
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="col-xl-3 col-lg-8 col-md-8 col-sm-9 col-12">
                         <div class="header-search text-end d-flex align-items-center mainmenu-wrapper">
@@ -71,6 +96,8 @@
                                     <partial name="_LoginPartial" />
                                 </ul>
                             </div>
+
+
                             <!-- Start Hamburger Menu  -->
                             <div class="hamburger-menu d-block d-xl-none ">
                                 <div class="hamburger-inner">
@@ -84,7 +111,6 @@
             </div>
         </header>
         <!-- Start Header -->
-
         <!-- Start Mobile Menu Area  -->
         <div class="popup-mobilemenu-area">
             <div class="inner">
@@ -109,120 +135,120 @@
                     <li><a asp-action="Index" asp-controller="Tags">Tags</a></li>
                     <partial name="_LoginPartial" />
                 </ul>
-                
+
             </div>
         </div>
         <!-- End Mobile Menu Area  -->
+        @RenderBody()
 
-            @RenderBody()
-        
-                @*<partial name="_LoginPartial" />*@
-    <!-- Start Footer Area  -->
-    <div class="axil-footer-area axil-footer-style-1 bg-color-white">
-        <!-- Start Footer Top Area  -->
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <!-- Start Post List  -->
-                        <div class="inner d-flex align-items-center flex-wrap">
-                            <h5 class="follow-title mb--0 mr--20">Follow Us</h5>
-                            <ul class="social-icon color-tertiary md-size justify-content-start">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            </ul>
-                        </div>
-                        <!-- End Post List  -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Footer Top Area  -->
-        <!-- Start Copyright Area  -->
-        <div class="copyright-area">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-9 col-md-12">
-                        <div class="copyright-left">
-                            <div class="logo">
-                                <a href="index.html">
-                                    <img class="dark-logo" src="~/assets/images/logo/logo-black.png" alt="Logo Images">
-                                    <img class="light-logo" src="~/assets/images/logo/logo-white2.png" alt="Logo Images">
-                                </a>
+        @*<partial name="_LoginPartial" />*@
+        <!-- Start Footer Area  -->
+        <div class="axil-footer-area axil-footer-style-1 bg-color-white">
+            <!-- Start Footer Top Area  -->
+            <div class="footer-top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <!-- Start Post List  -->
+                            <div class="inner d-flex align-items-center flex-wrap">
+                                <h5 class="follow-title mb--0 mr--20">Follow Us</h5>
+                                <ul class="social-icon color-tertiary md-size justify-content-start">
+                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                </ul>
                             </div>
-                            <ul class="mainmenu justify-content-start">
-                                <li>
-                                    <a class="hover-flip-item-wrapper" href="#">
-                                        <span class="hover-flip-item">
-                                            <span data-text="Contact Us">Contact Us</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="hover-flip-item-wrapper" href="#">
-                                        <span class="hover-flip-item">
-                                            <span data-text="Terms of Use">Terms of Use</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="hover-flip-item-wrapper" href="#">
-                                        <span class="hover-flip-item">
-                                            <span data-text="AdChoices">AdChoices</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="hover-flip-item-wrapper" href="#">
-                                        <span class="hover-flip-item">
-                                            <span data-text="Advertise with Us">Advertise with Us</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="hover-flip-item-wrapper" href="#">
-                                        <span class="hover-flip-item">
-                                            <span data-text="Blogar Store">Blogar Store</span>
-                                        </span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-12">
-                        <div class="copyright-right text-start text-lg-end mt_md--20 mt_sm--20">
-                            <p class="b3">All Rights Reserved © 2022</p>
+                            <!-- End Post List  -->
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- End Footer Top Area  -->
+            <!-- Start Copyright Area  -->
+            <div class="copyright-area">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-9 col-md-12">
+                            <div class="copyright-left">
+                                <div class="logo">
+                                    <a href="index.html">
+                                        <img class="dark-logo" src="~/assets/images/logo/logo-black.png" alt="Logo Images">
+                                        <img class="light-logo" src="~/assets/images/logo/logo-white2.png" alt="Logo Images">
+                                    </a>
+                                </div>
+                                <ul class="mainmenu justify-content-start">
+                                    <li>
+                                        <a class="hover-flip-item-wrapper" href="#">
+                                            <span class="hover-flip-item">
+                                                <span data-text="Contact Us">Contact Us</span>
+                                            </span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="hover-flip-item-wrapper" href="#">
+                                            <span class="hover-flip-item">
+                                                <span data-text="Terms of Use">Terms of Use</span>
+                                            </span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="hover-flip-item-wrapper" href="#">
+                                            <span class="hover-flip-item">
+                                                <span data-text="AdChoices">AdChoices</span>
+                                            </span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="hover-flip-item-wrapper" href="#">
+                                            <span class="hover-flip-item">
+                                                <span data-text="Advertise with Us">Advertise with Us</span>
+                                            </span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="hover-flip-item-wrapper" href="#">
+                                            <span class="hover-flip-item">
+                                                <span data-text="Blogar Store">Blogar Store</span>
+                                            </span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12">
+                            <div class="copyright-right text-start text-lg-end mt_md--20 mt_sm--20">
+                                <p class="b3">All Rights Reserved © 2022</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Copyright Area  -->
         </div>
-        <!-- End Copyright Area  -->
-    </div>
-    <!-- End Footer Area  -->
+        <!-- End Footer Area  -->
+        @*  <script src="~/lib/jquery/dist/jquery.min.js"></script>*@
+        @*  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
+        <!-- Modernizer JS -->
+        <script src="~/assets/js/vendor/modernizr.min.js"></script>
+        <!-- jQuery JS -->
+        <script src="~/assets/js/vendor/jquery.js"></script>
+        <!-- Bootstrap JS -->
+        <script src="~/assets/js/vendor/bootstrap.min.js"></script>
+        <script src="~/assets/js/vendor/slick.min.js"></script>
+        <script src="~/assets/js/vendor/tweenmax.min.js"></script>
+        <script src="~/assets/js/vendor/js.cookie.js"></script>
+        <script src="~/assets/js/vendor/jquery.style.switcher.js"></script>
 
 
+        <!-- Main JS -->
+        <script src="~/assets/js/main.js"></script>
 
-  @*  <script src="~/lib/jquery/dist/jquery.min.js"></script>*@
-  @*  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
-    <!-- Modernizer JS -->
-    <script src="~/assets/js/vendor/modernizr.min.js"></script>
-    <!-- jQuery JS -->
-    <script src="~/assets/js/vendor/jquery.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="~/assets/js/vendor/bootstrap.min.js"></script>
-    <script src="~/assets/js/vendor/slick.min.js"></script>
-    <script src="~/assets/js/vendor/tweenmax.min.js"></script>
-    <script src="~/assets/js/vendor/js.cookie.js"></script>
-    <script src="~/assets/js/vendor/jquery.style.switcher.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
 
 
-    <!-- Main JS -->
-    <script src="~/assets/js/main.js"></script>
+        <script src="https://cdn.ckeditor.com/ckeditor5/35.3.0/classic/ckeditor.js"></script>
 
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+        @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
