--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -142,7 +142,11 @@
             </div>
         </div>
         <!-- End Mobile Menu Area  -->
-        @RenderBody()
+        <div class="container content">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
 
         @*<partial name="_LoginPartial" />*@
       
