--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -32,10 +32,10 @@
                                 <p class="b1 description">Coding has always been a interest of mine from a young age. To see myself get more efficient every day is truly rewarding!</p>
                                 <ul class="social-share-transparent size-md">
                              
-                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#mailto:travistbrownsc@gmail.com"><i class="far fa-envelope"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="https://github.com/Travistybrown"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="https://twitter.com/TravisBrownDev"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="mailto:travistbrownsc@gmail.com"><i class="far fa-envelope"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/travis-brown-52630b253/"><i class="fab fa-linkedin-in"></i></a></li>
                                 </ul>
                             </div>
                         </div>
