update admin nav

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                                                      asp-controller="BlogPosts"
                                                      asp-action="Index">
                                                         <span class="hover-flip-item">
-                                                            <span data-text="Manage Categories">Manage Categories</span>
+                                                            <span data-text="Manage Categories">Manage Blogs</span>
                                                         </span>
                                                 </a>
                                                </li>
@@ -75,6 +75,24 @@
                                                       </span>
                                                   </a>
                                                </li>
+                                                <li>
+                                                    <a class="hover-flip-item"
+                                                   asp-controller="Categories"
+                                                   asp-action="Index">
+                                                        <span class="hover-flip-item">
+                                                            <span data-text="Manage Categories">Manage Categories</span>
+                                                        </span>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a class="hover-flip-item"
+                                                   asp-controller="Tags"
+                                                   asp-action="Index">
+                                                        <span class="hover-flip-item">
+                                                            <span data-text="Manage Categories">Manage Tags</span>
+                                                        </span>
+                                                    </a>
+                                                </li>
                                             </ul>
                                         </li>
                                    }
